--- a/F1_Fantasy/src/app/navbar/navbar.component.html
+++ b/F1_Fantasy/src/app/navbar/navbar.component.html
@@ -3,10 +3,10 @@
 </div>
 <nav>
     <ul>
-        <li><a [routerLink]="['']">Home</a></li>
-        <li><a [routerLink]="['drivers']">Drivers</a></li>
-        <li><a [routerLink]="['circuitsF1']">Circuits</a></li>
-        <li><a [routerLink]="['your_team']">Your Team</a></li>
-        <li><a [routerLink]="['races_results']">Results</a></li>
+        <li [routerLink]="['']">Home</li>
+        <li [routerLink]="['drivers']">Drivers</li>
+        <li [routerLink]="['circuitsF1']">Circuits</li>
+        <li [routerLink]="['your_team']">Your Team</li>
+        <li [routerLink]="['races_results']"> Results</li>
     </ul>
 </nav>
