--- a/F1_Fantasy/src/app/drivers/drivers.component.html
+++ b/F1_Fantasy/src/app/drivers/drivers.component.html
@@ -1,51 +1,70 @@
-<h1>DRIVERS</h1>
-<p>Select 5 drivers to be part of your team. The best performance they do on the Grand Prix, the more points you will get. </p>
-<ul>
-    <p>Points:</p>
-    <li>Winner of race: 10 points.</li>
-    <li>2nd position podium: 6 points.</li>
-    <li>3rd position podium: 4 points.</li>
-    <li>First position on grid: 5 points.</li>
-    <li>Second position on grid: 2 points.</li>
-    <li>Fastest lap: 3 points.</li>
-    <li>Grand Slam: 5 points.</li>
-    <li>Hack trick: 3 points.</li>
-    <li>Any driver: 1 point per position gained or -1 per position lost at the end of the race according to their positions on grid. A DNF means -3 points.</li>
-</ul>
-<section class="driversCardsContainer">
-    <article *ngFor="let x of driversInfo, let i = index" class="driverInfoContainer">
-        <div (click)="toggleDriverInfo(i)" class="driverInfoCard">
-            <div>
-                <img [src]="x.img" width="75px">
-                <div>
-                    <h3> {{x.name}} </h3>
-                    <span> # {{x.driver_num}} </span>
-                    <img [src]="x.country" alt="">
-                </div>
-            </div>
-            <div>
-                <span> {{x.team}} </span>
-                <img [src]="x.team_img" alt="">
-            </div>
-        </div>
-        <div *ngIf="showDriverInfo[i]" class="driverInfoToggled">
-            <li>Victorias:  {{x.GP_victories}} </li>
-            <li>Podiums:  {{x.podiums}} </li>
-            <li>Poles:  {{x.poles}} </li>
-        </div>
-        <button (click)="selectDriver(i)" >SELECT DRIVER</button>
-    </article>
+<section>
+    <h1>DRIVERS</h1>
+    <p>Select 5 drivers to be part of your team. The best performance they do on the Grand Prix, the more points you will get. </p>
+    <ul>
+        <p>Points:</p>
+        <li>Winner of race: 10 points.</li>
+        <li>2nd position podium: 6 points.</li>
+        <li>3rd position podium: 4 points.</li>
+        <li>First position on grid: 5 points.</li>
+        <li>Second position on grid: 2 points.</li>
+        <li>Fastest lap: 3 points.</li>
+        <li>Grand Slam: 5 points.</li>
+        <li>Hack trick: 3 points.</li>
+        <li>Any driver: 1 point per position gained or -1 per position lost at the end of the race according to their positions on grid. A DNF means -5 points.</li>
+    </ul>
 </section>
+<div class="sectionWrapper">
+    <section class="selectedDriversContainer">
+        <article class="messageWrapper">
+            <h4 *ngIf="completeOptionsMessage" > You already selected 5 drivers. Delete one if you want to change your team. </h4>
+            <h4 *ngIf="alreadyPickedMessage" >This driver is already in your team</h4>
+            <h4 *ngIf="showBudgetMessage" >This driver exceeds the remaining budget.</h4>
+            <h4> Total budget available: {{budget}} mill. € </h4>
+        </article>
+        <div class="unkownContainer">
+            <article class="selectedDriversWrapper" *ngFor="let unkonwn of pickedDrivers">
+                <div class="unknownDriversContainer" >
+                    <img [src]="unkonwn.driver_Img" width="600px">
+                    <h4> {{unkonwn.driver_Name}} </h4>
+                    <button (click)="deleteDriver(unkonwn.driver_Name)">DELETE</button>
+                </div>
+                <!-- <div *ngFor="let chosenDriver of pickedDrivers" class="selectedDriverInfo">
+                    <h4>{{chosenDriver.driver_Name}} </h4>
+                    <img [src]="chosenDriver.driver_Img" width="120px">
+                </div> -->
+            </article>
+        </div>
+        <!-- <button (click)="saveTeam()" >SAVE TEAM</button> -->
+    </section>
+    <section class="driversCardsContainer">
+        <article *ngFor="let x of driversInfo, let i = index" class="driverInfoContainer">
+            <div class="driverInfo-Y">
+                <div (click)="toggleDriverInfo(i)" class="driverInfoCard">
+                    <img [src]="x.img" width="110px">
+                    <div>
+                        <h3> {{x.name}} </h3>
+                        <span> # {{x.driver_num}} </span>
+                        <img [src]="x.country" alt="">
+                    </div>
+                    <div class="teamInfoContainer">
+                        <span> {{x.team}} </span>
+                        <img [src]="x.team_img" alt="" width="60px">
+                    </div>
+                    <h3>{{x.price}} mill. € </h3>
+                </div>
+                <button (click)="selectDriver(i)" >SELECT DRIVER</button>
+            </div>
+            <div *ngIf="showDriverInfo[i]" class="driverInfoToggled">
+                <li *ngIf="x.championships>0" >Championsips:{{x.championships}} </li>
+                <li *ngIf="x.GP_victories>0">GP Victories:  {{x.GP_victories}} </li>
+                <li *ngIf="x.podiums>0">Podiums:  {{x.podiums}} </li>
+                <li *ngIf="x.poles>0">Poles:  {{x.poles}} </li>
+            </div>
+        </article>
+    </section>
+</div>
 <br>
 <br>
 <hr>
-<section class="selectedDriverContainer">
-    <h4 *ngIf="completeOptionsMessage" > You already selected 5 drivers. Delete one if you want to change your team. </h4>
-    <h4 *ngIf="alreadyPickedMessage" >This driver is already in your team</h4>
-    <div *ngFor="let chosenDriver of pickedDrivers" class="selectedDriverInfo">
-         <h4>{{chosenDriver.driver_Name}} </h4>
-         <img [src]="chosenDriver.driver_Img" width="120px">
-         <button (click)="deleteDriver(chosenDriver.driver_Name)">DELETE</button>
-    </div>
-    <button (click)="saveTeam()" >SAVE TEAM</button>
-</section>
+
