--- a/F1_Fantasy/src/styles.scss
+++ b/F1_Fantasy/src/styles.scss
@@ -1,3 +1,4 @@
 @import './app/drivers/drivers.component.scss';
 @import './app/your-team/your-team.component.scss';
-@import './app/navbar/navbar.component.scss'
+@import './app/navbar/navbar.component.scss';
+@import './app/app.component.scss'
