--- a/F1_Fantasy/src/app/drivers/drivers.component.scss
+++ b/F1_Fantasy/src/app/drivers/drivers.component.scss
@@ -1,21 +1,43 @@
 .sectionWrapper{
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 4rem;
+}
+.unkownContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
 }
 .unknownDriversContainer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
-    img{
-        margin: 1.5em 1.5em;
-    }
+    align-items: center;
+    margin: .5rem 2.5rem 1rem;
+    width: 16rem;
+    padding-bottom: 1em;
+    background-color: rgb(93, 85, 85);
+    border-radius: 12px;
+    border: solid white ;
+    border-width: 0px 4px 4px 0px;
+}
+.unknownDriverIcon{
+    width: 200px;
+    margin: 1em .5em .5em;
+}
+.deleteIcon{
+    width: 40px;
+    margin: .3em;
+}
+.deleteIcon:hover{
+    cursor: pointer;
 }
 .selectedDriversContainer{
-    width: 70%;
+    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,13 +47,15 @@ justify-content: space-evenly;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
-    max-height: 600px; /* Establece la altura máxima del contenedor */
+    width: 20rem;
+    max-height: 700px; /* Establece la altura máxima del contenedor */
     overflow-y: auto;
+    margin-right: 5rem;
 }
 .driverInfoContainer{
     margin: .5em 0;
-    background-color: grey;
+    background-color:rgb(93, 85, 85);
+    border-radius: 12px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -44,13 +68,17 @@ justify-content: space-evenly;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
+    padding: 1rem 0;
+    text-align: center;
 }
 .driverInfoCard{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    width: 75%;
+    width: 100%;
+    span{
+        font-size: 1.7rem;
+    }
 }
 .driverInfoCard:hover{
     cursor: pointer;
@@ -67,25 +95,45 @@ justify-content: space-evenly;
         margin-top: 1em;
     }
 }
-.unkownContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 90%;
-}
-.selectedDriversWrapper{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    margin: 1em 1em;
-    width:25%;
-}
 .teamInfoContainer{
     display: flex;
     flex-direction: row;
     align-items: center;
     img{
         margin-left: 1em;
+    }
+}
+.messageWrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .budgetTitle{
+        font-size: 2em;
+        margin-top: .4em;
+    }
+    .warnMessage{
+        background-color: rgb(208, 25, 25);
+        border-radius: 12px;
+        padding: .5rem 1rem;
+        font-size: 1.6em;
+        margin: .2em 0;
+    }
+}
+.numberCountryContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    img{
+        width: 50px;
+    }
+}
+.gameRulesList{
+    p, li{
+        font-size: 1.3em;
+    }
+    li{
+        margin-bottom: .5em;
+        list-style: none;
+        text-decoration: none;
     }
 }
