--- a/F1_Fantasy/src/app/your-team/your-team.component.html
+++ b/F1_Fantasy/src/app/your-team/your-team.component.html
@@ -1,5 +1,5 @@
-<h1>YOUR TEAM</h1>
-<section>
+<section class="yourTeamMainSection">
+    <h1>YOUR TEAM</h1>
     <article>
         <div class="YTWrapper">
             <div *ngFor="let driver of userTeam" class="driverResultCard">
@@ -8,21 +8,21 @@
             </div>
         </div>
     </article>
-    <article *ngFor="let GPData of GPDataResults; index as i">
-        <div class="resultsCardWrapper"  >
+    <article *ngFor="let GPData of GPDataResults; index as i" class="resultsCardContainer"  >
+        <div class="titleResultsCard">
             <img [src]="GPData.GP_Flag" alt="country flag" class="countryFlag">
             <h2>{{GPData.GP_Name}}</h2>
             <button (click)="toggleResults(i)" > check results</button>
         </div>
-        <div *ngIf="showGPResults[i]" class="driversResultsContainer">
-            <div class="driversResultsCardsWrapper">
-                <div *ngFor="let driver of userTeam" class="driverResultCard">
-                    <img [src]="driver.driver_Img" alt="driver" width="100px">
-                    <h4>{{driver.driver_Points}} points</h4>
+            <div *ngIf="showGPResults[i]" class="driversResultsContainer">
+                <div class="driversResultsCardsWrapper">
+                    <div *ngFor="let driver of userTeam" class="driverResultCard">
+                        <img [src]="driver.driver_Img" alt="driver" width="100px">
+                        <h4>{{driver.driver_Points}} points</h4>
+                    </div>
                 </div>
+                <h3>Total points: {{userTotalGPPoints}} </h3>
             </div>
-            <h3>Total points: {{userTotalGPPoints}} </h3>
-        </div>
     </article>
 </section>
 
