--- a/F1_Fantasy/src/app/your-team/your-team.component.scss
+++ b/F1_Fantasy/src/app/your-team/your-team.component.scss
@@ -1,8 +1,18 @@
-.resultsCardWrapper{
+.yourTeamMainSection{
+
+}
+.resultsCardContainer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    background-color: rgb(93, 85, 85);
+    border-radius: 12px;
+    padding: .6em;
+    margin: 0 auto 1em;
+    min-height: 100px;
+    width: 85%;
+    color: white;
     button{
         max-height: 1.8em;
         margin-left: 2em;
@@ -12,14 +22,31 @@
         margin: 0 1.5em;
     }
 }
-.YTWrapper{
+.titleResultsCard{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    width: 50%;
+    justify-content: space-around;
+    align-items: center;
 }
 .driversResultsContainer{
     display: flex;
     flex-direction: column;
+    color: white;
+    margin-top: 1em;
+    // background-color:  rgb(112, 104, 104) ;
+    // border-radius: 0 0 12px 12px;
+}
+.YTWrapper{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 50%;
+    padding: .5em 0;
+    margin: 0 auto 1rem;
+    color: white;
+    background-color:  rgb(93, 85, 85);
 }
 .driversResultsCardsWrapper{
     display: flex;
@@ -30,4 +57,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 1em;
 }
