--- a/F1_Fantasy/src/styles.scss
+++ b/F1_Fantasy/src/styles.scss
@@ -1,4 +1,5 @@
 @import './app/drivers/drivers.component.scss';
 @import './app/your-team/your-team.component.scss';
 @import './app/navbar/navbar.component.scss';
-@import './app/app.component.scss'
+@import './app/app.component.scss';
+@import './app/circuits/circuits.component.scss';
