--- a/F1_Fantasy/src/app/navbar/navbar.component.scss
+++ b/F1_Fantasy/src/app/navbar/navbar.component.scss
@@ -2,8 +2,10 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    min-height: 3.5em;
+    min-height: 4em;
     align-items: center;
+    background-color: white ;
+    font-size: 1.5em;
 }
 .routingWrapper{
     display: flex;
