--- a/F1_Fantasy/src/app/main/main.component.html
+++ b/F1_Fantasy/src/app/main/main.component.html
@@ -1,3 +1,23 @@
-<h2>WELCOME TO</h2>
-<h1 class="titleMain">FANTASY F1</h1>
+<section class="sectionWelcomeTitle">
+    <article class="artWelcomeTitle">
+        <div class=" welcomeContainer">
+            <h2 class="welcomeTitle">WELCOME TO</h2>
+            <h1 class="titleMain">FANTASY F1</h1>
+        </div>
+    </article>
+    <article>
+        <article class="fantasyInfoContainer welcomeContainer">
+            <h3>This is a demo application (desktop version) fora Fantasy F1 made with ANGULAR <img src="assets/angular.png" alt=""> framework.</h3> 
+            <p>You might be wondering what a Fantasy is. It's a real game where you, as a user, select a team made up of current F1 drivers. To build that team, you'll need to consider your budget and the market value of the drivers.</p>
+            <p>Once you have your team assembled, points will be assigned based on the actual performance of your chosen drivers in the weekend's real Grand Prix.</p>
+            <p>This demo was built to practice handling Angular 16 along with TypeScript and Sass for styling. In doing so, I was able to practice event binding, component communication, the use of interfaces and services, and setting up routing among others. An API has been used to obtain information about circuits and drivers.
+
+
+
+
+            </p>
+        </article>
+    </article>
+
+</section>
 
