--- a/F1_Fantasy/src/styles.scss
+++ b/F1_Fantasy/src/styles.scss
@@ -3,3 +3,4 @@
 @import './app/navbar/navbar.component.scss';
 @import './app/app.component.scss';
 @import './app/circuits/circuits.component.scss';
+@import './app/footer/footer.component.scss';
