--- a/F1_Fantasy/src/app/app.component.scss
+++ b/F1_Fantasy/src/app/app.component.scss
@@ -2,13 +2,13 @@
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css');
 
 html{
-    background-color: rgb(49, 46, 46);
+    background-color: rgb(58, 56, 56);
     font-family: 'Rubik';}
 body{
     margin: 0;
 }
 h1{
-    color: white;
+    font-size: 2em;
     letter-spacing: 2px;
 }
 section{
