--- a/F1_Fantasy/src/app/drivers/drivers.component.scss
+++ b/F1_Fantasy/src/app/drivers/drivers.component.scss
@@ -5,6 +5,24 @@
     justify-content: space-evenly;
     margin-top: 4rem;
 }
+.sectionRules{
+    padding: 7rem 0 2rem;
+    background: url('/assets/6299232.jpg'), linear-gradient(180deg, rgb(121, 114, 111) 0%, rgba(102, 97, 95, 0.8) 100%);
+    background-blend-mode: normal;
+    background-size: cover;
+}
+.rulesWrapper{
+    color: white;
+    padding: 1rem 2.7rem 1.2rem;
+    background-color: rgba(112, 104, 104, 0.75) ;
+    margin: 0 auto 2rem;
+    width: 90%;
+    border-radius: 12px;
+    
+}
+.topSectionTitle{
+    color: black;
+}
 .unkownContainer{
     display: flex;
     flex-direction: row;
@@ -20,7 +38,7 @@
     margin: .5rem 2.5rem 1rem;
     width: 16rem;
     padding-bottom: 1em;
-    background-color: rgb(93, 85, 85);
+    background-color: rgb(106, 98, 98);
     border-radius: 12px;
     border: solid white ;
     border-width: 0px 4px 4px 0px;
@@ -48,9 +66,24 @@
     flex-direction: column;
     align-items: center;
     width: 20rem;
-    max-height: 700px; /* Establece la altura máxima del contenedor */
+    max-height: 700px; 
     overflow-y: auto;
     margin-right: 5rem;
+    background-color: rgb(111, 106, 106);
+    border-radius: 12px;
+    overflow-y: scroll;
+}
+.driversCardsContainer::-webkit-scrollbar{
+    width: 12px;               /* width of the entire scrollbar */
+    height: 4px;
+}
+.driversCardsContainer::-webkit-scrollbar-track{ /* Espacio de la barra */
+    border-radius: 8px;
+    background-color: rgb(156, 152, 152);
+}
+.driversCardsContainer::-webkit-scrollbar-thumb{ /* Barra */
+    border-radius: 8px;       
+    background-color: rgb(254, 248, 248);
 }
 .driverInfoContainer{
     margin: .5em 0;
@@ -72,6 +105,7 @@
     text-align: center;
     border-radius: 12px;
     letter-spacing: 1px;
+    min-height: 20rem;
 }
 .driverInfoCard{
     display: flex;
@@ -86,8 +120,13 @@
     cursor: pointer;
 }
 .driverInfoToggled{
-    margin-top: 1.5em;
+    margin-top: 1em;
     margin-bottom: 1em;
+    border-top: solid rgb(129, 124, 124) 3px;
+    li{
+        list-style-type: none;
+        margin: .8em 0 0.2em;
+    }
 }
 .selectedDriverInfo{
     display: flex;
@@ -146,17 +185,20 @@
 }
 .FERR{
     background-color: rgb(222, 23, 23);
+    border: solid 3px rgb(14, 13, 13);
+
 }
 .MRCDS{
     background-color: rgb(10, 171, 157) ;
+    border: solid 3px rgb(255, 255, 255);
 }
 .ASMN{
     background-color: rgb(4, 80, 71);
     border: solid 3px rgb(255, 255, 255);
-
 }
 .McL{
-    background-color: rgb(206, 136, 6);
+    background-color: rgb(191, 121, 18);
+    border: solid 3px rgb(65, 34, 2);
 }
 .ALPN{
     background-color: rgb(82, 77, 249);
@@ -165,6 +207,8 @@
 }
 .ARomeo{
     background-color: rgb(156, 20, 20) ;
+    border: solid 3px rgb(116, 24, 24);
+
 }
 .ATauri{
     background-color: white;
@@ -179,4 +223,8 @@
 }
 .Will{
     background-color: rgb(127, 175, 253) ;
+    border: solid 3px rgb(46, 90, 184);
 }
+
+
+
